@@ -271,3 +271,4 @@ Fixes:
     * Edje entry: return surrounding string until the start position of selection
     * Ecore-imf: fix crash when ecore_imf_context_del is called in ecore_imf_context_input_panel_callback_call
     * Edje textblock: Fixed issue with quoted formats.
+    * Edje textblock: Keep the text styles when new font by the text class is applied.
